--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,5 @@
 body {
-  margin: 0;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background-color: #a9c9ff;
-  background-image: linear-gradient(180deg, #a9c9ff 0%, #ffbbec 100%);
-
-  height: 100vh;
+  background: var(--outgoing-chat-bg);
 }
 
 code {
