--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,9 @@
 body {
-  background: var(--outgoing-chat-bg);
+  margin: 0;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background-color: #3E5077;
+  height: 100vh;
 }
 
 code {
